Fix z-index issue in embed and autocomplete
Fixes https://trello.com/c/jEe2uvha

--- a/app/assets/stylesheets/base/_variables.css.scss
+++ b/app/assets/stylesheets/base/_variables.css.scss
@@ -30,6 +30,7 @@ $orange: #EC6E4D;
 $placeholder-color: darken($bg-color, 20%);
 $yammer-blue: #48AEF1;
 $yellow: #FEFFDF;
+$autocomplete-border-color: #CBCBCB;
 
 // Flash colors
 $notice:#FFF3E5;
