--- a/app/assets/stylesheets/jquery-ui/_autocomplete.css.scss
+++ b/app/assets/stylesheets/jquery-ui/_autocomplete.css.scss
@@ -1,9 +1,10 @@
 ul.ui-autocomplete {
   background: transparent;
   border: none;
-  @include box-shadow(0 3px 10px transparentize($blue, 0.7));
+  @include box-shadow(0 3px 10px transparentize(darken($autocomplete-border-color, 20%), 0.7));
   list-style: none;
   margin-top: 1px;
+  z-index: 99 !important;
 
   li.ui-autocomplete-type {
     background-color: rgb(240,240,240);
@@ -14,7 +15,7 @@ ul.ui-autocomplete {
     -ms-background-position-y: center;
     background-repeat: no-repeat;
     background-size: 10%, 100%;
-    border: 1px solid darken($bg-color, 20%);
+    border: 1px solid $autocomplete-border-color;
     border-bottom: none;
     @include box-shadow(inset 0 1px 0 0 rgba(255,255,255, 0.7));
     font-size: 0.9em;
@@ -57,7 +58,7 @@ ul.ui-autocomplete {
 
     a {
       background-color: #FFF;
-      border: 1px solid darken($bg-color, 20%);
+      border: 1px solid $autocomplete-border-color;
       border-bottom: none;
       @include border-radius(0);
       color: darken($bg-color, 50%);
@@ -78,7 +79,7 @@ ul.ui-autocomplete {
       div.autocomplete-avatar {
         background-position: center center;
         background-size: cover;
-        border: 1px solid darken($bg-color, 20%);
+        border: 1px solid $autocomplete-border-color;
         @include border-radius(3px);
         @include box-shadow(inset 0 1px 0 0 rgba(255,255,255, 0.3), 0 1px 0 0 rgba(255,255,255, 0.2));
         height: 32px;
@@ -132,7 +133,7 @@ ul.ui-autocomplete {
         > span {
           background-color: rgb(240,240,240);
           @include background-image(linear-gradient(90deg, rgb(235,235,235), rgb(245,245,245)));
-          border-right: 1px solid darken($bg-color, 20%);
+          border-right: 1px solid $autocomplete-border-color;
           @include box-shadow(inset 0 1px 0 0 rgba(255,255,255, 0.7));
           @include border-radius(0 0 0 4px);
           @include inline-block;
@@ -152,7 +153,7 @@ ul.ui-autocomplete {
 
     &:last-child {
       a {
-        border-bottom: 1px solid darken($bg-color, 20%);
+        border-bottom: 1px solid darken($autocomplete-border-color, 10%);
         @include border-radius(0 0 4px 4px);
       }
     }
