--- a/app/assets/stylesheets/views/events/_show.css.scss
+++ b/app/assets/stylesheets/views/events/_show.css.scss
@@ -378,10 +378,6 @@ div.show-event {
       border-bottom: 0;
       padding-bottom: 0;
     }
-
-    .yj-hd {
-      z-index: 0;
-    }
   }
 
   div.event-url {
